--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-react-renderer": "^15.12.0",
     "contentful": "^9.1.22",
     "next": "12.1.4",
+    "next-sitemap": "^2.5.20",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
